fix align

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -32,8 +32,6 @@ textarea
     > div:not(:last-child)
         margin-bottom: 10px  
 
-#opened-note
-    @extend #new-note
 
 .new-note-buttons
     white-space: nowrap
@@ -51,10 +49,23 @@ textarea
     float: right
 
 
+//opened note    
+#opened-note
+    width: 90%
+    top: 20%
+    @extend #new-note
+    .opened-note-description
+        width: 80%
+        word-wrap: break-word
+        margin: 0 auto
+        text-align: center
+        display: block
+
+
 // note
 .note
     width: 200px
-    height: 170px
+    height: 200px
     text-align: center
     position: absolute
     background: linear-gradient(#eee8ae, #f0d6a3)
@@ -62,4 +73,4 @@ textarea
     .note-description
         width: 130px
         word-wrap: break-word
-        margin: 0 auto;
+        margin: 0 auto
